# rust-kata-001

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: dependabot.yml
docs/: EDGE_CASES.md  ENDPOINTS.md
sql/: 0000_migration.sql  0001_migration.sql
src/: client.rs  config.rs  lib.rs  main.rs
src/api/: crates_io_api_client.rs  crates_io_client.rs  mod.rs
src/cache/: mod.rs  redis_cache.rs
src/data/: mod.rs  relational_database.rs
src/domain/: mod.rs
src/example/: routes.rs
src/factory/: database_pool.rs  http_client.rs  http_client_pool.rs  mod.rs  redis_pool.rs
src/graph/: api.rs  data.rs  domain.rs  flow.rs  mod.rs  models.rs  routes.rs
src/graph/api/: client.rs  crates_io_client.rs  mod.rs
src/health/: common.rs  database.rs  database_health_checker.rs  internet.rs  internet_http_health_checker.rs  internet_https_health_checker.rs  mod.rs  models.rs  uptime_health_checker.rs
src/health/checkers/: internet_http_connectivity.rs  internet_https_connectivity.rs  mod.rs  mysql_connectivity.rs  redis_connectivity.rs  uptime.rs
src/persistence/: mod.rs  relational_database.rs
src/routes/: mod.rs
src/routes/dependency/: mod.rs  models.rs  routes.rs
src/routes/graph/: mod.rs  routes.rs
src/routes/health/: mod.rs  models.rs  routes.rs
src/routes/status/: mod.rs  models.rs  routes.rs
src/status/: internet.rs  mod.rs  models.rs  routes.rs  runtime.rs
