[package]
name = "rust-kata-001"
version = "0.1.0"
authors = ["agabani <agabani@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.1.0", features = ["rustls"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
log = "0.4.11"
semver = "0.11.0"
serde = "1.0.116"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "macros", "mysql", "runtime-tokio" ] }