[package]
name = "rust-kata-001"
version = "0.1.0"
authors = ["agabani <agabani@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.1.0", features = ["rustls"] }
async-trait = "0.1.41"
chrono = "0.4.19"
dotenv = "0.15.0"
env_logger = "0.8.1"
futures = "0.3.6"
log = "0.4.11"
redis = { version = "0.17.0", features = [ "tokio-comp", "tokio-rt-core" ] }
reqwest = { version = "0.11.2", features = [ "json", "rustls-tls", "gzip" ] }
semver = "0.11.0"
serde = "1.0.116"
serde_json = "1.0.59"
sqlx = { version = "0.4.1", default-features = false, features = [ "macros", "mysql", "runtime-tokio-rustls" ] }

[dev-dependencies]
actix-rt = "1.1.1"